fixed invalid runtime issue and now basic HTTP request is routed properly and responding

--- a/serverless.yml
+++ b/serverless.yml
@@ -3,7 +3,7 @@ service: serverless
 provider:
   name: aws
   runtime: nodejs8.10
-  profile: femasters
+  # profile: femasters
   region: us-west-1
   stage: dev
 
@@ -11,9 +11,17 @@ plugins:
   - serverless-offline
 
 functions:  
+#
+  api:
+    handler: src/api/api.handler
+    # picks the kind of events the lambda can subscribe to 
+    # subscribing to an HTTP event that will do a get request to /api
+    events: 
+      - http: GET /api
+#
   todos:
     handler: src/api/todos.handler
-    
+#   
   todo:
     handler: src/api/todo.handler
     
