--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "dependencies": {
-    "express": "^4.16.3",
-    "serverless-http": "^1.5.5",
-    "serverless-offline": "^3.20.2"
+    "express": "^4.18.1",
+    "serverless-http": "^3.0.1",
+    "serverless-offline": "^8.8.1"
   },
   "scripts": {
-    "dev": "sls offline start --port 4500",
+    "dev": "sls offline start",
     "test": "jest"
   },
   "devDependencies": {
-    "jest": "^22.4.3",
-    "supertest": "^3.0.0"
+    "jest": "28.1.0",
+    "supertest": "6.2.3"
   }
 }
